Replacing 'Freerunner' with 'FreeRunner'

--- a/Wishlist%2FAccessories.mw
+++ b/Wishlist%2FAccessories.mw
@@ -30,7 +30,7 @@ Different special covers could be made available with features like:
 * Option to completely design printable case styles, perhaps with engraving. Ability to share these on a 'community' site.
 * Solar powered recharger (perhaps as extendable/unfoldable [[Expansion Back]]).
 * Rubber protection like available for iPod, of course in different colors and transparency.
-* Underwater case. This could be a housing that fits around a normal Freerunner like the kinds for digital cameras. Alternatively, it could be an actual case that the Freerunner guts fits into.
+* Underwater case. This could be a housing that fits around a normal FreeRunner like the kinds for digital cameras. Alternatively, it could be an actual case that the FreeRunner guts fits into.
 * Screen Protector: A simple and very easy to produce screen protector, like the one on my iPaq: 
 
 Protector Flipped up image: http://www.pocketpcthoughts.com/images/ppct-ipaq6900-preview-small-01.jpg
@@ -89,7 +89,7 @@ The stylus pen with built in laser pointer and flashlight seemed too big to be a
 
 ==USB laser pointer==
 
-Make a laser pointer that plugs into the USB connector and controlled in the same through the same interface that that wold make the Freerunner a presentation remote control.
+Make a laser pointer that plugs into the USB connector and controlled in the same through the same interface that that wold make the FreeRunner a presentation remote control.
 
 ==Bluetooth earpiece with possible both-ears use==
 
