Replacing 'Freerunner' with 'FreeRunner'

--- a/Wishlist_-_Hardware_-_Novel_Devices.mw
+++ b/Wishlist_-_Hardware_-_Novel_Devices.mw
@@ -130,7 +130,7 @@ A model similar to competing devices could be build from a standard 1-din case w
 
 A more geeky version of the above could offer wifi for example (to communicate from your PC with the car that's in the garage. E.g. uploading new music). Or perhaps the USB slot in the front can be made a full USB host so you can use USB wifi sticks or other USB devices as well as standard USB storage.
 
-A more innovative version of such a device could be by embedding a big touch-screen LCD in the front of the device and optionally just one button: a knob that you can turn and push in. Resolution would have to match the aspect ratio of a standard 1-din device so it would probably be something like 1024x480 or 800x320. Such a device would also need a more capable graphics processor, perhaps one similar to the Neo Freerunner capable of OpenGL ES. Touchscreen LCDs are common in car navigation equipment but to my knowledge have never been used on standard 1-din in-dash receivers before. You could get a very novel and elegant UI using this, much more elegant that in-dash receivers usually are.
+A more innovative version of such a device could be by embedding a big touch-screen LCD in the front of the device and optionally just one button: a knob that you can turn and push in. Resolution would have to match the aspect ratio of a standard 1-din device so it would probably be something like 1024x480 or 800x320. Such a device would also need a more capable graphics processor, perhaps one similar to the Neo FreeRunner capable of OpenGL ES. Touchscreen LCDs are common in car navigation equipment but to my knowledge have never been used on standard 1-din in-dash receivers before. You could get a very novel and elegant UI using this, much more elegant that in-dash receivers usually are.
 
 ==Unsorted==
 
