--- a/Wishlist%2FBuiltInScriptingLanguage.mw
+++ b/Wishlist%2FBuiltInScriptingLanguage.mw
@@ -239,7 +239,7 @@ For all these reasons, a choice should be made, and it should be made quickly.  
 # libswt-gtk provides uses GTK2 to display SWT java apps, and libgtk-java provides a direct binding.
 # If we're really lucky, people will realize that Java Virtual Machine belongs on embedded devices and has great performance there.  
 # The Java API greatly reduces plumbing work and helps simplify application development greatly.  In addition, we can add to it providing additional APIs for the mobile device and then these would be available to all of the applications.
-# The JVM has built in support for adding scripting languages, so regardless which we choose, it _should_ be on Java Virtual Machine.  Studies have shown that many features of the scripting languages actually run faster on the JVM.  Currently there are many scripting languages that we can use, including: javascript, ruby, python, and javafx.  This would be a huge win for the device.
+# The JVM has built in support for adding scripting languages, so regardless which we choose, it _should_ be on Java Virtual Machine.  Studies have shown that many features of the scripting languages actually run faster on the JVM.  Currently there are many scripting languages that we can use, including: javascript, ruby, groovy, python, and javafx.  This would be a huge win for the device.
 # JavaFX is a Multimedia based scripting language that adds wow to devices
 # The Neo1973 was demoed at JavaOne running the JavaFX Mobile so there is already a lot of reusable work in this area.
 # Using gcj, java can be compiled to native binaries. However, this means no multiple languages on one JVM and nullifies it's value in this list.
