/* Feature matrix */ Added Groovy VM scripting langage.

--- a/Wishlist%2FBuiltInScriptingLanguage.mw
+++ b/Wishlist%2FBuiltInScriptingLanguage.mw
@@ -22,7 +22,7 @@ Fill in and add to this if possible.
 |align="center" |Medium
 |align="center" |Heavy
 |align="center" |JIT/gcj
-|align="center" |Y (Jython/JRuby)
+|align="center" |Y (Jython/JRuby/Groovy)
 |-
 !align="center" |Python
 |align="center" |Mature/Active
