/* DolfjeBot1 proposals */ Add sentence of bot flag request

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -182,6 +182,7 @@ http://en.wikipedia.org/wiki/Wikipedia:Categories,_lists,_and_series_boxes
 
 == DolfjeBot1 proposals ==
 Their is a bot on the openmoko wiki that's controlled by [[User:Dolfje]]. If you have tasks for the bot, please put them [[User:DolfjeBot1|here]].
+A request has been made to tag DolfjeBot1 user account with the 'bot' flag. But the bureaucrat in charge has not been identified.
 
 ==Wiki engine issues==
 Can we please install/fix the following features for this wiki:
