*Empty MediaWiki Message*

--- a/Om_2008_Guide.mw
+++ b/Om_2008_Guide.mw
@@ -22,6 +22,8 @@ Press "remove" to close currently focused application.
 
 ''' Commands '''
 
+These commands may be used in the terminal application (or in a remote SSH connection). Minimal shell usage skills may be required for Unix newcomers.
+
 *'''"ifconfig"''' - Displays network information.
 
 *'''"opkg update"''' - Updates list of available software.
