--- a/Om_2008_Guide.mw
+++ b/Om_2008_Guide.mw
@@ -41,7 +41,7 @@ These commands may be used in the terminal application (or in a remote SSH conne
 ==== Internet ====
 Follow this [[http://support.microsoft.com/kb/306126 guide (Windows Users)]]to share your internet with your phone.
 
-To share your internet connection on a Linux host follow this [[USB_Networking|Guide]]
+To share your internet connection on a Linux host follow this [[USB_Networking|USB networking guide]].
 
 *If you are also behind a router you may have to change your LAN IP range in your router to avoid using 192.168.0.* as this is the same IP range as what your phone and ICS uses. (If you don't there will be an IP conflict)
 
