--- a/Om_2008_Guide.mw
+++ b/Om_2008_Guide.mw
@@ -39,7 +39,10 @@ These commands may be used in the terminal application (or in a remote SSH conne
 === Configuring Om 2008.8 ===
 
 ==== Internet ====
-Follow this [[http://support.microsoft.com/kb/306126 guide (Windows Users)]]to share your internet with your phone.
+
+===== Connecting your FR through USB to an internet-connected computer =====
+
+Follow this [http://support.microsoft.com/kb/306126 guide (Windows Users)]to share your internet with your phone.
 
 To share your internet connection on a Linux host follow this [[USB_Networking|USB networking guide]].
 
@@ -60,8 +63,6 @@ Edit the USB section to look like this:
  	up echo nameserver 208.67.222.222 > /etc/resolv.conf 
  	up echo nameserver 208.67.220.220 >> /etc/resolv.conf 
  	#up echo nameserver 192.168.0.200 > /etc/resolv.conf
-
-
 
 ==== Advanced power management ====
 If you decide not to install the Unofficial Zecke updates you should install "illume-config" to can gain access to more advanced power management features and to change the look of the GUI through the wrench that will now appear in the top bar. (Restart your phone)
