--- a/Neo_FreeRunner_Wifi.mw
+++ b/Neo_FreeRunner_Wifi.mw
@@ -6,7 +6,9 @@ There are other ways to enable wireless communications on the Neo, including [[B
 
 == Using the GUI on 2008.8 ==
 
-In the Settings application on Om 2008.8, there's a "WiFi" item. If it says "WiFi unknown", you can delete the /etc/volatives.cache file and reboot.  It should work after that.[http://docs.openmoko.org/trac/ticket/1734]  After connecting using the GUI, you may also need to run "udhcpc eth0" manually in the terminal to get DNS entries added to your resolv.conf.  You may also need to run "ifdown usb0" to remove the routing issue caused by having both interfaces up at the same time.
+In the Settings application on Om 2008.8, there's a "WiFi" item. It should work fairly well in stable-updated 2008.8 (even with WPA2).
+
+If it says "WiFi unknown", you can delete the /etc/volatives.cache file and reboot.  It should work after that.[http://docs.openmoko.org/trac/ticket/1734]  After connecting using the GUI, you may also need to run "udhcpc eth0" manually in the terminal to get DNS entries added to your resolv.conf.  You may also need to run "ifdown usb0" to remove the routing issue caused by having both interfaces up at the same time.
 
 Otherwise there's also [[lint-wifi]].  Refer to the section below, [[#Available Software|"Available Software"]] to find out what else might be available.
 
