--- a/Om_2008_Guide.mw
+++ b/Om_2008_Guide.mw
@@ -66,7 +66,7 @@ Edit the USB section to look like this:
 
 ===== Wireless =====
 
-See [[Neo FreeRunner Wifi]] or details on how to use Wifi to connect your FR to the internet.
+See [[Neo FreeRunner Wifi]] for details on how to use Wifi to connect your FR to the internet.
 
 ==== Advanced power management ====
 If you decide not to install the Unofficial Zecke updates you should install "illume-config" to can gain access to more advanced power management features and to change the look of the GUI through the wrench that will now appear in the top bar. (Restart your phone)
