/* Bugs/Fixes */ Wifi seems to work now

--- a/Om_2008_Guide.mw
+++ b/Om_2008_Guide.mw
@@ -88,7 +88,7 @@ The Media Player is basically useless due to the default theme. To install with 
 
 *Your phone will go into standby after 30 seconds EVEN when connected to your computer or wall charger. (Disable this under the settings menu)
 
-*The wifi doesn't work too well right now.
+*The wifi doesn't work too well right now. (well, works now with 2008.8 updates, I think -- [[User:OlivierBerger|OlivierBerger]] 14:25, 31 August 2008 (UTC))
 
 *Accelerometers have alpha support via [[Gestures]]
 
