--- a/SHR_Development.mw
+++ b/SHR_Development.mw
@@ -5,7 +5,10 @@ There is a new (much simpler) way to build SHR that is under construction right 
 
 === First build ===
 
-* Download the FSO/SHR ''Makefile'' and ''common'' directory from [http://shr.bearstech.com/ Bearstech] (see README for details).
+* Download the FSO/SHR ''Makefile'' and ''common'' directory from [http://shr.bearstech.com/ Bearstech] (see README for details). You can use this [http://hacks-galore.org/aleix/files/scripts/get-shr.sh script] (''wget'' needed, edit it to fulfill your needs), type:
+
+ $ . get-shr.sh
+ 
 * Change this line in ''common/setup-env'':
 
  export BBPATH="${TOPDIR}:${TOPDIR}/openembedded:${TOPDIR}/bitbake"
