/* 080817 Group Sale in Taiwan */

--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -3040,8 +3040,6 @@ payment: paid by ATM account transfer
 
 Maximum amount of transfer-out for non-designated accounts per day should not exceed NT$30,000
 
-Cathay United Bank(國泰世華/013)　04250XXXXXX8
-
 How to take:
 *face to face: in HsinChu
 *mail
@@ -3147,7 +3145,13 @@ A: I don't actually know, but I hope we can get them before end of August.
 
 Q: What about Invoice(發票)?
 
-A: There won't be a invoice for everyone, but one only. I would copy the invoice for each one of you. But if you do need a separate invoice for your order, tell me first, and openmoko could handle that.
+A: There won't be a invoice for everyone, but one only. If you do need a separate invoice for your order, tell me first, and openmoko could handle that.
+Requests that OM could handle: 
+* Company tax ID (公司統一編號)
+* Change details (明細) names (as long as the name can describe the product)
+
+Requests that OM could handle, but need special process, and the price will be higher. Please contact OM first if you have such request.
+* Change details to something that can't describe the product, like expandable (耗材), ink, ..., etc.
 
 
 Q: Are you Taiwanese?
