--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -3029,7 +3029,7 @@ Contact me here: [http://wiki.openmoko.org/wiki/Special:Emailuser/Jecuendet Cont
 We are already 6, so 4 remaining. Contact me at : jec at jesc dot ch
 
 == Taiwan ==
-==== 080817 Group Sale in Taiwan ====
+=== 080817 Group Sale in Taiwan ===
 Host: Mac Lin (mkl23@hotmail.com)
 
 8/17: last day to gather order
@@ -3121,7 +3121,7 @@ How to take:
 |}
 -------------
 
-FAQ:
+=== FAQ ===
 
 Q: Will there be second group sale in Taiwan?
 
