--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -3029,7 +3029,16 @@ Contact me here: [http://wiki.openmoko.org/wiki/Special:Emailuser/Jecuendet Cont
 We are already 6, so 4 remaining. Contact me at : jec at jesc dot ch
 
 == Taiwan ==
-=== 080817 Group Sale in Taiwan ===
+=== Second Group Sale ===
+Host: Mac Lin(mkl23@hotmail.com) (not necessary to be me...)
+
+Last Order Date: (unknown)
+
+Last Payment Date: (unknown)
+
+How to Pay: (unknown)
+
+=== 080817 Group Sale ===
 Host: Mac Lin (mkl23@hotmail.com)
 
 8/17: last day to gather order
