/* Known Issues */ some problems may not be present any more

--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -54,7 +54,7 @@ To install the Om2008.8 stable distribution on the Neo FreeRunner, download the 
 
 == Known Issues ==
 
-This is only a subset. See [http://docs.openmoko.org/trac/search?q=2008.8 all tickets with 2008.8] in the bug tracker.
+This is only a subset, and some of the bits reported bellow may have been fixed by stable updates (see bellow) too). See [http://docs.openmoko.org/trac/search?q=2008.8 all tickets with 2008.8] in the bug tracker.
 
 '''GSM'''
 
