/* Second Group Sale */

--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -3038,6 +3038,8 @@ Last Payment Date: (unknown)
 
 How to Pay: (unknown)
 
+How to Get: (unknown)
+
 === 080817 Group Sale ===
 Host: Mac Lin (mkl23@hotmail.com)
 
