Rewritten wireless section to mention the debian documentation of wpasupplicant for how it is configured in debian

--- a/Debian.mw
+++ b/Debian.mw
@@ -53,11 +53,13 @@ Issues:
 
 == WLAN ==
 
-You can set up the wireless connection to your home router.
-Assuming your wireless router uses WPA security and DHCP:
+Make sure the following packages are installed
  # apt-get install wireless-tools wpasupplicant dhcp3-client
 
-Edit <code>/etc/network/interfaces</code> to include a section like this:
+=== An example configuration ===
+
+Assuming your wireless router uses WPA security and DHCP, 
+edit <code>/etc/network/interfaces</code> to include a section like this:
 <pre>
 auto eth0
 iface eth0 inet dhcp
@@ -74,12 +76,16 @@ You can test by running
 You can determine your IP address by running
  # ifconfig eth0
 
-
 Issues:
 * only works if in presence of wireless network on boot, or when manually running <code>ifup eth0</code>
 * booting away from wireless network is slower because waits for DHCP to time out
 * does not reestablish connection when leaving wireless area and then returning
 * does not support multiple wireless networks or open hotspots that you may travel between
+
+=== Configuration options ===
+
+To use the all the possibilities of <code>wpasupplicant</code> like roaming and automatic connection to different networks, 
+you should read <code>/usr/share/doc/wpasupplicant/README.Debian.gz</code>
 
 == Bluetooth ==
 
