--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -3163,7 +3163,7 @@ Requests that OM could handle:
 
 Requests that OM could handle, but need special process, and the price will be higher. Please contact OM first if you have such request.
 * Change details to something that can't describe the product, like expandable (耗材), ink, ..., etc.
-* Some institution (government, school,...,etc) require to get goods and invoice first, and make the payment until the expanse is granted (需要取貨與發票後才能報帳，等一段時間後才能付款)
+* Some institution (government, school,...,etc) require to get goods and invoice first, and make the payment until the expanse is granted (某些學校或政府機關 需要取貨與發票後才能報帳，等一段時間後才能付款)
 
 == Thailand ==
 === Bangkok ===
