OpenMoko uses git to maintain the kernel source

--- a/Kernel.mw
+++ b/Kernel.mw
@@ -16,15 +16,14 @@ Some additional patches are required for
 * [[GSM Communication Infrastructure]]
 ** The kernel-level part (TS07.10 line discipline, GPRS line discipline)
 
-== Kernel Patchset ==
-
-The latest patchset against the abovementioned vanilla kernel can be found at https://svn.openmoko.org/trunk/src/target/kernel/patches/. This is a so-called "[http://savannah.nongnu.org/projects/quilt quilt] patchset".  In order to apply it, you have to download it into a "patches" directory below the "linux-2.6.x" directory, and then call "quilt push -a", which pushes all patches onto the kernel.
-
-For example, after unpacking the 2.6.21.1 kernel tarball, you might type the following commands:
-    cd linux-2.6.21.1
-    svn co https://svn.openmoko.org/trunk/src/target/kernel/patches
-    quilt push -a
-to apply the latest patchset to that kernel.  Note that 2.6.21.1 may not be the correct kernel to build against - see previous section to determine just which kernel version to download and patch.
+== Obtaining the kernel source ==
+The openmoko "version" of the kernel can be obtained using git
+ git clone git://git.openmoko.org/git/kernel.git linux-2.6
+ cd linux-2.6
+ git checkout origin/stable
+According to [[http://git.openmoko.org/?p=kernel.git;a=summary|The OpenMoko git web interface]] you should checkout origin/andy.<br />
+But according to Andy Green him self it is "normally nowadays you want to checkout origin/stable".<br />
+The web interface also contains a list of the other heads(branches) available
 
 == Kernel Configuration ==
 
