*Empty MediaWiki Message*

--- a/ReMoko.mw
+++ b/ReMoko.mw
@@ -1,4 +1,4 @@
-{{applications|ReMoko}}
+{{application|ReMoko}}
 [[Image:Remoko_menu.jpg|thumb]]
 
 ==About==
@@ -14,9 +14,6 @@
 [http://code.google.com/p/remoko/downloads/list ReMoko Packages]
 
 ===Install Instructions===
-
-*'''ReMoko dependencies'''
-**bluez-utils (>= 3.23) remokoserver python-ecore python-edbus python-edje python-evas python-dbus python-textutils
 
 *'''FSO Milestone 2'''
 ** The FSO images built before 20080807 have a bug in the framework bluetooth system, to use remoko in a older FSO image you will need to change the lines below in '/usr/lib/python2.5/site-packages/framework/subsystems/ousaged/generic.py':
@@ -46,17 +43,6 @@ after that you will need to restart the framework (kill the process and start it
 ** Go to the bluetooth preferences and choose 'Add a new device';
 ** Choose the neo (default name is  'BlueZ (0)') and choose 'no password';
 
-* Mac: any idea how to bypass the password panel?
-
-===Using custom keys===
-* The keys bellow don't exist by default in the Illume/qtopia keyboard's, to add the keys to a profile you have to write it.
-  Allowed Keys:
-   f1-f12
-   win (plus any letter or number, the f key is not allowed with the 'win' key, due a small bug)
-
-===Using Gestures===
-* To use [[gestures]] to send events, you just need to install the gestures package (no need to start the gestures listener). You can also train the gestures.
-
 ===Features===
 *'''Connection'''
 ** Connection to the majority of the bluetooth stacks;
@@ -78,9 +64,9 @@ after that you will need to restart the framework (kill the process and start it
 
 
 ===Known Issus===
-* The installer is a little bit broken at the moment, so check all the ReMoko dependencies, for Om 2008.8 the package: python-textutils should be the only dependence missing by default.
 * In some images (last FSO) the keyboard only show up, if the app is in window mode;
-* The mouse profile can slow down a little bit if you have the gestures daemon and other program running on the phone. 
+* The 'backslash' key is wrong mapped;
+* In illume keyboard in the FSO milestone 2 have some bug's yet in the default profile and in the numbers profile;
 * Connection problems with Symbian S60 devices with BT-HID keyboard app provided by Nokia;
 
 ===Tested Bluetooth Stacks ===
@@ -95,6 +81,7 @@ after that you will need to restart the framework (kill the process and start it
 ===TODO===
 
 * Games profile;
+* Accelerometer profile:
 
 ===Need help in:===
 * Application logo (Tag name: ReMoko);
@@ -110,14 +97,13 @@ after that you will need to restart the framework (kill the process and start it
 
 ==Ideas for the application name==
 
-*MokoRemote (white_gecko [-])
-*BlueRemote (white_gecko [-])
+*MokoRemote
+*BlueRemote
 *<font color="#00FF00">ReMoko</font> or ReMoto (maybe some character that's a combination of t and k, at least in the splash/logo)
-*Mokomote (white_gecko [+])
+*Mokomote
 *Mokomo (shorter) -- + 1 vote
-*FreeMote (Builds on freerunner and remote) -- +1 vote (white_gecko [-])
+*FreeMote (Builds on freerunner and remote) -- +1 vote
 *MokoKeyMouse (It can be a bit too long, so you can make it shorter as: MKM)
-*Bluemote or BlueMote [+1]
 
 *'''Add your idea here'''
 
@@ -127,7 +113,7 @@ after that you will need to restart the framework (kill the process and start it
 
 ==Wish List==
 * Possibility to control presentations easily (few buttons, PG-UP, PG-DOWN for example) - <font color="#00FF00">Done</font>
-** maybe even navigation via gestures - <font color="#00FF00">Done</font>
+** maybe even navigation via gestures
 ** possibly use the touchscreen similar to a touchpad (mouse) - <font color="#00FF00">Done</font>
 *** maybe it is too much, but if you manage to make the touchpad, you could get a small screenshot of the big screen (it is useful for presentations if you want to draw/write something without quality).
 * ideally generic GUI that loads controls from some xml config file to make it fully customizable for different purposes (media remote, presenter stick, ...)
@@ -138,7 +124,6 @@ after that you will need to restart the framework (kill the process and start it
 * Avahi search for HTTP services labeled say "remote" via ethernet (BT/LAN or Wifi). MythTV/Elisa and OOPresentation can develop their own html/flash/javascript/etc. "remotes" to hearts content without fine-grain syncing every change of code/GUI/API with your "Openmoko Remote App". Avahi/HTTP also lets desktop/laptop browsers to control "remotes"; this means a bigger community.
 * Have one Neo work as a keyboard for another Neo (which becomes the screen)! (should be possible even now i guess)
 * Change the icons on the mouse screen, so they are oriented as one's mouse would be. Right now the left mouse button is on the left, which is good. However, the image of the mouse is facing the user and the left mouse button is to the right of the image.
-* To improve on the current 'crude' gestures, have it recognize many of the motions used in sign-language (not fingerspelling).
 * '''Add your wish here'''
 
 ==Roadmap==
@@ -148,4 +133,6 @@ after that you will need to restart the framework (kill the process and start it
 * 3- Write the UI and some other features. - <font color="#FF9900">In progress</font>
 
 
+[[Category:User]]
+[[Category:Ideas| ]]
 [[Category:Software ideas]]
