Mentioned how to use matchbox or unclutter to hide the cursor

--- a/Debian.mw
+++ b/Debian.mw
@@ -142,6 +142,21 @@ The matchbox keyboard is available in "Accessories".
 
 = Miscellaneous =
 == Making the cursor invisible ==
+
+=== Using matchbox ===
+
+Matchbox has an option, <code>use_cursor</code>, that can be used to control whether to show the cursor. 
+For the default setup, edit <code>/usr/bin/zhone-session</code> and change the matchbox command to
+ matchbox-window-manager -use_titlebar no -use_cursor no
+
+=== Using unclutter ===
+
+Unclutter is a program that hides the cursor after a period of inactivity. To use unclutter, install it
+ #apt-get install unclutter
+and choose ''Yes'' to the question <code>Start unclutter automatically?</code>. To change settings edit 
+<code>/etc/default/unclutter</code>.
+
+=== Changing the cursor ===
 To make the cursor invisible create a file called empty.cursor with this content:
  #define empty.cursor_width 16
  #define empty.cursor_height 16
