--- a/Mofi.mw
+++ b/Mofi.mw
@@ -71,5 +71,17 @@ You can also download the '''nightly SVN tree snapshot''' from https://projects.
 
 [[Image:mofi_connect.png]]
 
+== If Mofi crahes ==
+Mofi sometimes crashes with:
+
+ Traceback (most recent call last):
+  File "/usr/lib/mofi/mofi_gui.py", line 30, in <module>
+    import gtk
+  File "/usr/lib/python2.5/site-packages/gtk-2.0/gtk/__init__.py", line 82,
+ in <module>
+    init()
+ NameError: name 'init' is not defined
+
+If this happens, edit the file /usr/lib/python2.5/site-packages/gtk-2.0/gtk/__init__.py and change the call to init() on line 82 to _init().
 
 [[Category:Applications]]
