--- a/Kernel.mw
+++ b/Kernel.mw
@@ -27,9 +27,13 @@ The web interface also contains a list of the other heads(branches) available
 
 == Kernel Configuration ==
 
-The latest kernel configuration file can be found at https://svn.openmoko.org/trunk/oe/packages/linux/linux-gta01/.  Just copy the config file corresponding to the correct kernel version to the linux-2.6.x/.config file.
+Before you start the build of the kernel you need to configure it.
 
-It appears that it has been moved to https://svn.openmoko.org/trunk/src/target/kernel/config/
+A good place to start are the predefined configurations. ''defconfig-gta01'' and ''defconfig-gta02'' are some of the more interesting configurations. They are available inside the checkout of the source.
+
+You just copy one of the configuration files into .config 
+
+To customize the configuration use ''make menuconfig''
 
 == Kernel building ==
 
