--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -1178,7 +1178,7 @@ Status: 17/20
 ==== Padova ====
 
 * Andrea [mailto:nick(at)linux.it nick(at)linux.it ]
-* Emanuele [mailto:pinguozz(at)medicinaopen.info pinguozz(at)medicinaopen.info ]
+* <s>Emanuele [mailto:pinguozz(at)medicinaopen.info pinguozz(at)medicinaopen.info ]</s> ('' Comprato il pezzo da eshopen dot com 31/8/2008'')
 
 ==== Treviso ====
 
