--- a/Main_Page%2Fde.mw
+++ b/Main_Page%2Fde.mw
@@ -15,6 +15,8 @@ __NOTOC__
 </tr>
 <tr valign="top" style="background:#333333">
 <td>
+* 28.8.: Trolltech [http://n2.nabble.com/qtopia-4.3.2-release-tp789148p789148.html veröffentlicht] Qtopia 4.3.2.
+* 26.8.: Verbreitung des Openmoko [http://lists.openmoko.org/pipermail/community/2008-August/027997.html Update] [[Om 2008.8]]  
 * 15.8.: [[Debian]] jetzt offiziell auf FreeRunner (siehe [http://n2.nabble.com/Debian-on-the-FreeRunner----now-official-td726410.html])
 * 8.8.: Erste offizielle Ausgabe von [[Om 2008.8]] (siehe [http://lists.openmoko.org/pipermail/community/2008-August/025619.html])
 * 4-5.8.: Openmoko auf der Linuxworld, San Francisco
