*Empty MediaWiki Message*

--- a/Debian.mw
+++ b/Debian.mw
@@ -42,9 +42,14 @@ The default time zone is UTC.  Reconfigure it by running
 
  # dpkg-reconfigure tzdata
 
-Set the clock manual using, e.g.
+To set the clock manually do something like
 
  # date -s 00:33
+
+If you have a network connection, do something like
+
+ # apt-get install ntpdate
+ # ntpdate-debian
 
 
 Issues:
