/* Python */ fixed typpo

--- a/D-Bus.mw
+++ b/D-Bus.mw
@@ -41,7 +41,7 @@ To dial a number:
 import dbus
 bus = dbus.SessionBus()
 proxy = bus.get_object("org.openmoko.Dialer", "/org/openmoko/Dialer")
-interface = dbus.Interface(object, "org.openmoko.Dialer")
+interface = dbus.Interface(proxy, "org.openmoko.Dialer")
 interface.Dial("12345")
 # or this: proxy.Dial("12345", dbus_interface="org.openmoko.Dialer")
 </pre>
