*Empty MediaWiki Message*

--- a/Host-based_development_with_Xoo_and_Xephyr.mw
+++ b/Host-based_development_with_Xoo_and_Xephyr.mw
@@ -43,6 +43,10 @@ Other Useful Packages
 
 Gentoo users run just
  # emerge <package>
+
+''note'': To get the Xephyr package installed Gentoo users have to rebuild the x11-base/xorg-server package with the "kdrive" use flag enabled ([http://gentoo-wiki.com/Scratchbox#Xephyr_support link])
+
+
 Debian/Ubuntu
  $ sudo apt-get install <package>
 For Fedora, you can use
