--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -439,6 +439,10 @@ Turku:
 
 * Jaakko Lehtinen <br /> jaakko dot lehtinen at gmail dot com
 
+Leppävirta
+
+*Esa-Petri Tirkkonen  <br /> esereja at yahoo dot co dot uk
+
 Pulster.de now sells individual phones at 329€/phone, but 10-packs at 299€/phone.
 
 === Already ordered ===
