--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -830,7 +830,7 @@ ordering rules:
 # tr3w [http://wiki.openmoko.org/wiki/Special:Emailuser/tr3w Contact]
 # Ferenc Szomor [http://wiki.openmoko.org/wiki/Special:Emailuser/Lci Contact]
 # Bolyóczki Zsombor, mogorva kukac tuxworx pont hu
-# Sütő Zoltán, suto dot zoltan at t dash online dot hu
+# <s>Sütő Zoltán, suto dot zoltan at t dash online dot hu</s>
 # Zsolt Pittmann, pittmann dot zsolt at gmail dot com
 # KREKACS Laszlo, laszlo {pont} krekacs {pont} list {kukacka} gmail {pont} com
 # Móker Tamás,[http://wiki.openmoko.org/wiki/Special:Emailuser/rwind Contact]
