--- a/Main_Page%2Fde.mw
+++ b/Main_Page%2Fde.mw
@@ -34,7 +34,7 @@ __NOTOC__
 [[Image:GTA02.gif |100px|left|frontside]]
 Openmoko™ ist ein [http://de.wikipedia.org/wiki/Open_Source Open Source] Project, welches unter der [[License| GPL und LGPL]] Lizenz steht. So ist die Idee von Openmoko, den weltweit ersten vollständig offenen Mobiltelefon-Software Stack zu entwickeln.
 
-Das Ziel von Openmoko ist die Entwicklung der weltweit ersten freien mobilen Plattform, die vollständig auf dem X-Server läuft und die meisten X-Anwendungen unterstützt. Sie können somit eine beliebige Software installieren, was einen enormen Vorteil für den Endanwender darstellt, da er nicht mehr ein neues Gerät kaufen muss, wenn er eine zusätzliche Funktionalität benötigt. So können Sie das Telefon nach Ihren Wünschen erweitern.
+Das Ziel von Openmoko ist die Entwicklung der weltweit ersten freien mobilen Plattform, die vollständig auf dem X-Server läuft und die meisten X-Anwendungen unterstützt. Sie können somit eine beliebige Software installieren, was einen enormen Vorteil für den Endanwender<br />darstellt, da er nicht mehr ein neues Gerät kaufen muss,<br /> wenn er eine zusätzliche Funktionalität benötigt.<br /> So können Sie das Telefon nach Ihren Wünschen erweitern.
 
 
 {| class="wikitable" cellspacing="0" cellpadding="0" width=60%
