/* Getting Started with your Neo FreeRunner */ add section linking warning.

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -114,7 +114,7 @@ A: In a conventional closed phone, the handset maker and the mobile network oper
 
 A: A list of examples of "closed" behaviour has been started here - [[Problems of typical "closed" phones]]
 
-== Getting Started with your Neo FreeRunner ==
+== Getting Started with your Neo FreeRunner == <!-- Do not rename section! This section is linked from pages which linked to Getting_Started_FAQ. -->
 
 === 2007.2 factory default software image ===
 
