Updated some dutch language: Is older version of home aka main page has a hidden trial to show the start of openmoko inc.

--- a/Main_Page%2Fnl.mw
+++ b/Main_Page%2Fnl.mw
@@ -14,7 +14,9 @@ __NOEDITSECTION__
 
 [[Image:OpenmokoFramework08.png|250px|left|Openmoko Software platform|thumb]]
 
-Openmoko™is begonnen als [http://en.wikipedia.org/wiki/Open_source Open Source] projekt onder de [[License| GPL en LGPL licentie]] en is gestart met als doel, om een open software platform voor mobiele telefoons te maken. De eerste telefoon waar Openmoko op draaide was de FIC Neo 1973, deze werd voor het eerst verkocht op 7 juli 2007. Openmoko heeft als slogan '''Open. Mobile. Free.'''
+Openmoko™is begonnen als [http://en.wikipedia.org/wiki/Open_source Open Source] projekt onder de [[License| GPL en LGPL licentie]] en is gestart met als doel om een open software platform voor mobiele telefoons te maken. De eerste telefoon waar Openmoko op draaide was de FIC Neo 1973, deze werd voor het eerst verkocht op 7 juli 2007. 
+
+Openmoko heeft als slogan '''Open. Mobile. Free.'''
 
 Het Openmoko platform, inclusief volledige host-based ontwikkelingstools dmv Xoo en Xephyr(xserver), stelt gebruikers in staat om mobiele apparaten om te toveren in unieke producten. Door onze licentievoorwaarde is dit voor 100% mogelijk en geeft dit gebruikers en ontwikkelaars volledige vrijheid, de vrijheid om de producten cosmetisch aan te passen, van het veranderen van de wallpaper tot het geheel veranderen van de software. Het geeft hen de vrijheid om nieuwe functies voor het apparaat te crieeren, zoals bijvoorbeeld een medisch hulpmiddel. Behalve de software, is de hardware ook vrij aan te passen, om dit te bereiken zijn de CAD bestanden vrijgegeven, en te verkrijgen op de officiele Openmoko site.
 
