/* Pages proposed for deletion */ +1 page.

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -90,6 +90,8 @@ Accepted and implemented requests should be deleted. Rejected requests should be
 |[[Guitar Tuning/de]] || english page was already deleted || [[User:Marko Knöbl|Marko Knöbl]]
 |-
 |[[Hear Me FIC]], [[Talk:Hear Me FIC]] and [[Hear Me FIC/it]] || no new suggestions since July 2007 || [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
+|-
+| [[Talk:Who is Who]] || Outdated, no information || [[User:Kempelen|Kempelen]]
 |}
 
 === Pages that especially need work === 
