--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -92,6 +92,8 @@ Accepted and implemented requests should be deleted. Rejected requests should be
 |[[Hear Me FIC]], [[Talk:Hear Me FIC]] and [[Hear Me FIC/it]] || no new suggestions since July 2007 || [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
 |-
 | [[Talk:Who is Who]] || Outdated, no information || [[User:Kempelen|Kempelen]]
+|-
+| [[Widget_Inheritance_Graph]] || Outdated and quite unlikely to get updated || [[User:Kempelen|Kempelen]]
 |}
 
 === Pages that especially need work === 
