Category changes: -Information, +Purchase

--- a/Shipping_Notes%2Fru.mw
+++ b/Shipping_Notes%2Fru.mw
@@ -16,4 +16,4 @@ http://www.tks.ru/db/tnved/tree/c8517120000/print
 
 ни сертификация ни лицензирование для сотовых телефонов ненужна. Проблема скорее с тем, как доказать таможне, что партия больше 10 телефонов будет некоммерческой... Между прочим, я спрашивал это у таможенников и они подтвердили, что сертификация не нужна.
 
-[[Category:Information]]
+[[Category:Purchase]]
