--- a/Related_Hardware.mw
+++ b/Related_Hardware.mw
@@ -99,4 +99,4 @@ Price: $190
 * Physical size: 143.6 mm wide, 82.9 mm high, 27 mm (excl. joystick approx.) / 34 mm deep
 * Weight: 161 gram (without battery)
 
-[[Category:Information]]
+[[Category:Hardware]]
