Category changes: -Openmoko, +Openmoko Inc.

--- a/Press_Coverage.mw
+++ b/Press_Coverage.mw
@@ -444,6 +444,7 @@ This site contains the press coverage about Openmoko and the Neo 1973 sorted by 
 *[http://www.bits-chips.nl/artikel/art_view.asp?ac=view&art_id=8540 bits-chips.nl] Openmoko moet mobieltjes openen voor ontwikkelaars
 
 {{Languages|Press_Coverage}}
+
 [[Category:Community]]
 [[Category:Event]]
-[[Category:Openmoko]]
+[[Category:Openmoko Inc]]
