Category changes: -Information, +Community/de, +Openmoko Inc/de

--- a/Press_Coverage%2Fde.mw
+++ b/Press_Coverage%2Fde.mw
@@ -254,4 +254,5 @@ Diese Seite enthält Presse Veröffentlichungen bezüglich Openmoko und des Neo1
 
 {{Languages|Press_Coverage}}
 
-[[Category:Information]]
+[[Category:Community/de]]
+[[Category:Openmoko Inc/de]]
