Category changes: -Information, +Openmoko Inc, +Community/nl.

--- a/Press_Coverage%2Fnl.mw
+++ b/Press_Coverage%2Fnl.mw
@@ -327,4 +327,5 @@ Deze pagina bevat links naar verschillende artikelen van de pers die gaan over O
 
 {{Languages|Press_Coverage}}
 
-[[Category:Information]]
+[[Category:Community/nl]]
+[[Category:Openmoko Inc]]
