Category changes: -Information, +Community/fr, +Openmoko Inc

--- a/Press_Coverage%2Ffr.mw
+++ b/Press_Coverage%2Ffr.mw
@@ -256,4 +256,5 @@ Ce site contient les références presse relatives à Openmoko triées par langu
 
 {{Languages|Press_Coverage}}
 
-[[Category:Information]]
+[[Category:Community/fr]]
+[[Category:Openmoko Inc]]
