/* Pages proposed for deletion */ +1 page.

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -94,6 +94,8 @@ Accepted and implemented requests should be deleted. Rejected requests should be
 | [[Talk:Who is Who]] || Outdated, no information || [[User:Kempelen|Kempelen]]
 |-
 | [[Widget_Inheritance_Graph]] || Outdated and quite unlikely to get updated || [[User:Kempelen|Kempelen]]
+|-
+| [[Openmoko compatible cellphone providers]] <br/> [[Openmoko compatible cellphone providers/es]]<br/> [[Openmoko compatible cellphone providers/fr]]<br/> [[Openmoko compatible cellphone providers/it]]<br/> [[Openmoko compatible cellphone providers/nl]]<br/> [[Openmoko compatible cellphone providers/ro]] || Outdated, new pages describe this || [[User:Kempelen|Kempelen]]
 |}
 
 === Pages that especially need work === 
