--- a/Neo1973_compatible_cellphone_providers.mw
+++ b/Neo1973_compatible_cellphone_providers.mw
@@ -264,4 +264,4 @@ Virtual Operators:
 (More info available at: [http://www.gsmworld.com/roaming/gsminfo/index.shtml GSMworld.com])
 {{Languages|Neo1973_compatible_cellphone_providers}}
 
-[[Category:Information]]
+[[Category:Carriers]]
