Category changes: -Information, +Carriers

--- a/Neo1973_compatible_cellphone_providers%2Fit.mw
+++ b/Neo1973_compatible_cellphone_providers%2Fit.mw
@@ -1,7 +1,7 @@
 {|align=right
   |__TOC__
   |}
-Il Neo1973 utilizza [[GSM/it|GSM]] quadri-banda (850/900/1800/1900 MHz) così ogni GSM provider nel mondo dovrebbe essere compatibile. In generale, quando stai cercando una soluzione mobile nella tua zona, dovresti considerare:
+Il Neo1973 utilizza GSM quadri-banda (850/900/1800/1900 MHz) così ogni GSM provider nel mondo dovrebbe essere compatibile. In generale, quando stai cercando una soluzione mobile nella tua zona, dovresti considerare:
 * la ''copertura di rete'' dei provider disponibili
 * diverse ''tariffe'' di questi providers
 e scegliere quella giusta per te. Se non hai esperienza con la copertura GSM nella tua zona, puoi chiedere ai provider e alle persone che conosci che hanno già avuto esperienza con il GSM nella tua zona. Puoi volerti iscrivere alla nostra mailing list. Se hai dei dubbi riguardanti la copertura nella tua area, puoi farti prestare un telefono GSM o comprarne uno economico in modo da avere un'idea di come il Neo1973 lavorerà nella tua zona. Puoi mantenere i costi bassi usando una carta prepagata per i tuoi test.
@@ -148,4 +148,4 @@ Per una lista di piani solo-SIM, vai su [http://www.bellen.com/mobiel_overzicht/
 (Più informazioni su: [http://www.gsmworld.com/roaming/gsminfo/index.shtml GSMworld.com])
 {{Languages|Neo1973_compatible_cellphone_providers}}
 
-[[Category:Information]]
+[[Category:Carriers]]
