Category changes: -Information, +Community

--- a/Other_Resources.mw
+++ b/Other_Resources.mw
@@ -16,4 +16,4 @@ New to linux, check out these sites to get started
 * [http://www.google.com/trends?q=openmoko%2Cneo1973&ctab=1&geo=all&date=all  Openmoko and Neo1973 on google trends.]
 * [http://openmoko.togaware.com Togaware] The Openmoko and Neo1973 Desktop Survival Guide is a freely available guide to the Neo1973.
 
-[[Category:Information]]
+[[Category:Community]]
