Category changes: -Information, +Purchase

--- a/Getting_Openmoko%2Fes.mw
+++ b/Getting_Openmoko%2Fes.mw
@@ -21,4 +21,4 @@ Algunos distribuidores, incluyendo la tienda Openmoko, ofrecen precios mas bajos
 
 También puedes instalar Openmoko en otros teléfonos. Para una lista de teléfonos que pueden ejecutar Openmoko visita [[supported devices/es| Hardware compatible]]. Los dispositivos pueden no ser plenamente compatibles con Openmoko y pueden incluso no ofrecer ninguna funcionalidad GSM en Openmoko. Actualmente este wiki no ofrece ninguna información para instalar Openmoko en otros aparatos. Si tu tienes alguna, por favor [[Edit Wiki|compártela]].
 
-[[category:Information]]
+[[category:Purchase]]
