--- a/External_links.mw
+++ b/External_links.mw
@@ -1,17 +1,1 @@
-===Open source===
-http://en.wikipedia.org/wiki/Category:Embedded_Linux
-<!-- *[http://wiki.openmoko.org/ Welcome to the Openmoko™ public Wiki] -->
-*[http://qtopia.net/modules/devices/ Qtopia]
-*[http://www.elinux.org/ Embedded Linux Wiki]
-
-===Hardware===
-http://en.wikipedia.org/wiki/Category:Linux_based_devices
-*[http://www.openmoko.com/products-index.html Neo 1973]
-*[http://en.wikipedia.org/wiki/Meraki Meraki]
-**http://meraki.com/linux/
-**http://meraki.com/oursolution/hardware/
-**http://wiki.openwrt.org/OpenWrtDocs/Hardware/Meraki/Mini
-Embedded devices:
-*[http://fabathome.org/wiki/ Fab@Home wiki]
-*[http://bugcommunity.com/wiki/ BUG Wiki]
-[[Category:Information]]
+#REDIRECT [[Other Resources]]
