Category changes: -Information, +{{Wishlist}}

--- a/Geocaching.mw
+++ b/Geocaching.mw
@@ -1,3 +1,5 @@
+{{Wishlist}}
+
 == Overview ==
 ''Geocaching is an outdoor treasure-hunting game in which the participants use a Global Positioning System (GPS) receiver or other navigational techniques to hide and seek containers (called "geocaches" or "caches") anywhere in the world. A typical cache is a small waterproof container containing a logbook and "treasure," usually toys or trinkets of little value.''[http://www.wikipedia.org]
 
@@ -38,5 +40,3 @@ So the Geocaching application don't have to provide all these functionalities.
 * [http://geotoad.sourceforge.net GeoToad]: Ruby implementation for paperless caching. Not maintained.
 * [http://geo.rkkda.com/ Rick Richardson's Linux tools for geocaching]: Various tools for geocaching. Some are designed to turn the clickly-clicky-scroll-clicky-clicky messes that are geocaching.com and navicache.com into a set of tools which you can use in a batch or cron mode to establish your normal caching routine, backup your caches and cache logs, etc. Others are used to enter new waypoints, a free geocoder, create custom maps of waypoints, etc
 * [http://www.tangogps.org/gps/cat/News tangoGPS] Import of gpx Files, support for OpenstreetMap Files
-
-[[Category:Information]]
