Category changes: -Information, +Openmoko Inc

--- a/Advertising.mw
+++ b/Advertising.mw
@@ -174,4 +174,4 @@ See: [[Testimonials]]
 ** Are we advertising the Neo1973? And if so, is this our job? The Neo1973 is after all, a commerical product.
 
 [[Category:Community]]
-[[Category:Information]]
+[[Category:Openmoko Inc]]
