Category changes: -Openmoko, -Neo FreeRunner Hardware, +Categories (root)

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -539,6 +539,4 @@ __NOTOC__
 
 |}
 
-[[Category:Neo FreeRunner Hardware]]
-[[Category:Information| ]]
-[[Category:Openmoko| ]]
+[[Category:Categories]]
